rgw: can't download large random file when compression enable

Fixes :http://tracker.ceph.com/issues/20231

Signed-off-by: fang yuxiang <fang.yuxiang@eisoo.com>